tests/ui/consts/const_in_pattern/issue-65466.stderr
error: to use a constant of type `&[O<B>]` in a pattern, the type must implement `PartialEq`
  --> $DIR/issue-65466.rs:14:9
   |
LL |         C => (),
   |         ^

error: aborting due to 1 previous error

